# graphbase-memories-mcp

./: .gitignore  .mcp.json.example  404.html  ARCHITECTURE.md  LICENSE  Makefile  README.md  docker-compose.neo4j.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: branch-policy.yml  ci.yml  docs.yml  publish.yml
architecture/engines/: index.html
architecture/graph-schema/: index.html
architecture/system/: index.html
concepts/memory-model/: index.html
concepts/scope-resolution/: index.html
configuration/: index.html
connect/: index.html
development/: index.html
docs/: cli.md  configuration.md  connect.md  development.md  how-it-works.md  index.md  quickstart.md  robots.txt  troubleshooting.md
docs/architecture/: engines.md  graph-schema.md  system.md
docs/backends/: custom.md  neo4j.md  sqlite.md
docs/concepts/: memory-model.md  scope-resolution.md
docs/guides/: claude-code.md  multi-project.md  workflows.md
docs/releases/: v2.0.0.md  v2.1.0.md
docs/stylesheets/: extra.css
docs/tools/: analysis.md  artifacts.md  entity-tools.md  entity.md  federation.md  governance.md  graph-tools.md  hygiene.md  index.md  maintenance-tools.md  read-tools.md  retrieval.md  session.md  topology.md  write-tools.md
graphbase-tools/claude/: .mcp.json  .mcp.json.example
graphbase-tools/claude/.claude-plugin/: plugin.json
graphbase-tools/claude/hooks/: graphbase-hook.js  graphbase-hook.test.js  hooks.json
graphbase-tools/claude/skills/graphbase-entity/: SKILL.md  mcp.json
graphbase-tools/claude/skills/graphbase-federation/: SKILL.md  mcp.json
graphbase-tools/claude/skills/graphbase-governance/: SKILL.md  mcp.json
graphbase-tools/codex/: .mcp.json  README.md
graphbase-tools/codex/.codex/: config.toml.example  hooks.json.example
graphbase-tools/codex/.codex-plugin/: plugin.json
graphbase-tools/codex/hooks/: graphbase-codex-hook.js  graphbase-codex-hook.test.js
javascripts/: accessibility.js
quickstart/: index.html
releases/v2.0.0/: index.html
releases/v2.1.0/: index.html
search/: search_index.json
src/graphbase_memories/: __init__.py  __main__.py  _provider.py  _utils.py  config.py  main.py  server.py
src/graphbase_memories/devtools/: __init__.py  deps.py  server.py  utils.py
src/graphbase_memories/domain/: __init__.py  artifacts.py  enums.py  results.py
src/graphbase_memories/engines/: analysis.py  dedup.py  federation.py  freshness.py  governance.py  hygiene.py  impact.py  retrieval.py  scope.py  surface.py  topology_write.py  write.py
src/graphbase_memories/formatters/: __init__.py  yaml_context.py
src/graphbase_memories/graph/: __init__.py  driver.py  engine.py  models.py  neo4j_engine.py  sqlite_engine.py
src/graphbase_memories/lifecycle/: __init__.py  assembler.py  coordinator.py  inventory.py  resolver.py
src/graphbase_memories/mcp/: prompts.py  resources.py  server.py
src/graphbase_memories/mcp/schemas/: enums.py  (+5 more)
src/graphbase_memories/tools/: __init__.py  _session_batch.py  _types.py  analysis_tools.py  context_tools.py  entity_tools.py  graph_tools.py  lifecycle_tools.py  read_tools.py  session_tools.py  write_tools.py
stylesheets/: extra.css
tests/: conftest.py  shared.py  test_analysis_tools.py  test_cli.py  test_context_tools.py  test_devtools.py  test_devtools_events.py  test_devtools_health.py  test_devtools_projects.py  test_devtools_tools.py  test_engine_schema.py  test_engines.py  test_entity_tools.py  test_errors.py  test_federation.py  test_freshness.py  test_graph_overview.py  test_impact.py  test_lifecycle_tools.py  test_prompts.py  test_read_tools.py  test_repositories.py  test_resources.py  test_schema.py  test_server_devtools.py  test_session_tools.py  test_sqlite_contract.py  test_surface_engine.py  test_topology.py  test_write_tools.py
tests/neo4j/: conftest.py  test_neo4j_engine.py
tools/: index.html
tools/analysis/: index.html
tools/artifacts/: index.html
tools/entity/: index.html
tools/federation/: index.html
tools/governance/: index.html
tools/hygiene/: index.html
tools/retrieval/: index.html
tools/session/: index.html
tools/topology/: index.html
(+80 files in other folders)
